add event store
