# src/routes/folders/folders.ts
@@ -1,27 +1,31 @@
-import { DependsOnMethod, defaultEndpointsFactory } from "express-zod-api";
-import { z } from "zod";
+import { defaultEndpointsFactory } from "express-zod-api";
 import { authMiddleware } from "../../middleware/AuthMiddleware";
-
-const readyzEndpoint = defaultEndpointsFactory
+import { ulid } from "ulid";
+import {
+  folderCommandSchema,
+  folderStateSchema,
+} from "./../../aggregates/generated/folder.zod";
+import { commandHandler } from "../../common/commandHandler";
+import { folderCommandProcessor } from "../../aggregates/folder";
+const folderCommandsEndpoint = defaultEndpointsFactory
   .addMiddleware(authMiddleware)
   .build({
-    method: "get",
-    description: "Readiness",
-    input: z.object({}),
-    output: z.object({
-      user: z.string(),
-    }),
-    handler: async ({ options }) => {
-      return {
-        user: options.user.user_name,
-      };
+    method: "post",
+    description: "Folder Commands",
+    input: folderCommandSchema,
+    output: folderStateSchema,
+    handler: async ({ input, options }) => {
+      const folderCommandHandler = commandHandler(folderCommandProcessor, {
+        correlation_id: ulid(),
+        principal_id: options.user.user_id,
+        tenant_id: options.user.company_id,
+      });
+      return await folderCommandHandler.execute(input.folderId, input);
     },
   });
 
 export const foldersRoutes = {
   folders: {
-    command: {
-      create: readyzEndpoint,
-    },
+    command: folderCommandsEndpoint,
   },
 };
